# mvc-flask-dash

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
deploy/cloudformation/: ecr.yml
local/: release_to_dockerhub.sh  run_image.sh
scripts/: entrypoint.sh
src/: wsgi.py
src/app/: __main__.py  config.py  database.py  telemetry.py  utils.py
src/app/controllers/: mysql.py  postgres.py
src/app/controllers/swagger/fakenames/: GET.yaml
src/app/controllers/swagger/identity/: GET.yaml  POST.yaml
src/app/models/: mysql.py  postgres.py
src/app/views/dashboards/: postgres.py
src/app/views/templates/: index.html.j2  layout.html.j2
src/mvc_flask_dash/: app.py  config.py  telemetry.py
src/mvc_flask_dash/controllers/: postgres.py
src/mvc_flask_dash/controllers/swagger/fakenames/: PUT.yaml
src/mvc_flask_dash/controllers/swagger/identity/: PUT.yaml
src/mvc_flask_dash/models/: postgres.py
src/mvc_flask_dash/views/dashboards/: postgres.py
src/mvc_flask_dash/views/templates/: postgres.html.j2
src/project/: app.py  config.py  database.py  logging.py  telemetry.py  utils.py
src/project/controllers/: postgres.py
src/project/models/: postgres.py
src/project/static/css/: styles.css
src/project/views/: index.py
src/project/views/dashboards/: postgres.py
src/project/views/templates/: index.html.j2  layout.html.j2
tests/: conftest.py  populate.py
tests/integration/: test_a_model.py  test_b_controller.py  test_controller.py  test_model.py
(+1 files in other folders)
