# Docs https://packaging.python.org/en/latest/tutorials/packaging-projects/
[metadata]
name = mvc-flask-dash
version = file: VERSION
description = A python package to demonstrate MVC pattern implementation with Flask and Dash
long_description = file: README.md
license = MIT
url = https://github.com/testruction/mvc-app-dash
author = Florian JUDITH
author_email = florian.judith.b@gmail.com
keywords =
    webservice
    dashboard
    mvc
    backend
    frontend

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.8

install_requires =
    jwt
    dash
    pandas
    Flask
    Flask-Assets
    Flask-RESTful
    Flask-Migrate
    Flask-SQLAlchemy
    flasgger
    botocore
    psycopg2-binary
    sqlalchemy-cockroachdb
    opentelemetry-sdk-extension-aws
    opentelemetry-propagator-aws-xray
    opentelemetry-exporter-otlp
    opentelemetry-instrumentation-botocore
    opentelemetry-instrumentation-psycopg2
    opentelemetry-instrumentation-dbapi
    opentelemetry-instrumentation-flask
    opentelemetry-instrumentation-logging

tests_require =
    pytest
    tox

package_dir =
    = src

[options.package_data]
* = *.json, *.yaml, *.csv, *.sql, VERSION, *.j2, README.md, *.css


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mvc-flask-dash = mvc_flask_dash:app
